# wayland-penguins

./: Cargo.toml
.github/workflows/: actions.yml
scripts/: index.html  pixelit.js
src/: assets.rs  main.rs  penguin.rs  screen.rs
src/animations/: animation.rs  mod.rs
src/animations/back_forth_animation/: back_forth_animation.rs  back_forth_assets.rs  mod.rs
src/animations/balloon_animation/: balloon_animation.rs  balloon_animation_assets.rs  mod.rs
src/animations/copter_animation/: copter_animation.rs  copter_animation_assets.rs  mod.rs
src/widgets/: modal.rs
