[package]
name = "wayland-penguins"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = [
    "image",
    "canvas",
    "advanced",
    "smol",
] }
iced_runtime = { git = "https://github.com/iced-rs/iced" }
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop", package = "iced_layershell" }
rand = "0.9.1"
tracing-subscriber = "0.3.20"
